# ScaffoldML

./: README.md  config.yaml  pyproject.toml
ScaffoldML/src/data_loader/: __init__.py  data_loader.py  error_messages.py
ScaffoldML/src/data_preprocessing/: __init__.py  data_preprocessor.py
claims_ml/: main.py
claims_ml/src/data_loader/: __init__.py  data_loader.py  error_messages.py  exceptions.py
claims_ml/src/data_preprocessing/: load_config.py
tests/: conftest.py
tests/data_loader/: conftest.py  test_data_loader.py
tests/data_preprocessing/: conftest.py  test_data_preprocessor.py
tests/test_datasets/: test.csv  test.parquet  test_config.yaml  test_empty.csv
