[project]
name = "firstrealmyproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pytest-cov>=6.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
