[project]
name = "firstrealmyproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.5",
    "pytest-cov>=6.1.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
